twitter link updates

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,7 +88,7 @@
     <div class="social social-header">
 
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+      <a href="https://twitter.com/sistah_space" target ="_blank"> <button class="btn-social twitter">   Twitter</button></a>
     </div>
 
       <div class = "container-main">
@@ -98,6 +98,24 @@
         <h4> Our address </h4>
         <h4>Telephone number</h4>
         <h4>Email</h4>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+
 
 
         </div>
