--- a/pages/news.html
+++ b/pages/news.html
@@ -88,7 +88,7 @@
     <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social social-header">
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+      <a href="https://twitter.com/sistah_space" target ="_blank"> <button class="btn-social twitter">   Twitter</button></a>
     </div>
     <div>
   </div>
