--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -88,7 +88,7 @@
   <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
 <div class="social social-header">
  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
- <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+ <a href="https://twitter.com/sistah_space" target ="_blank"> <button class="btn-social twitter">   Twitter</button></a>
 </div>
     <img class = "img-responsive" src="../images/1.JPG" alt="picture">
       <div class ="text-area">
@@ -99,6 +99,9 @@
   </div>
 
 <div class="container-main">
+    <h2> Why Sistah Space?</h2>
+    <p class="text-justify">The Sistah Space was created for a combination of reasons and was a journey that started many years ago, but was fully developed in memory of a beautiful sistah-queen called Valerie Forde and her beautiful baby girl 'Baby J'. Valerie was everything that we would aspire to be, she was a loving mother, a much loved daughter, a valued family member, a dear friend to many and a community giant. Valerie was also a very creative artist. The world was robbed of two promising angels on the 31st March 2014 when an act of extreme domestic violence was perpetrated against them. This inspired the eventual launch of the developing seed which is Sistah Space. </p>
+
     <h2> Why is this needed?</h2>
     <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
     <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
