--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -97,8 +97,12 @@
       </div>
 
   <div class="container-main">
-  <h2 >Sistah Space</h2>
-
+  <h2 class="text-center">Sistah Space</h2>
+  <h4 class="text-justify"> <b>The Sistah Space, also known as 'The Space' or Sistah Space Sanctuary (SSS) is a unique space of refuge and respite for Sistahs who have been affected by domestic and sexual violence and abuse. </b></h4>
+  <p class="text-justify">So what is Sistah Space, it is a small venue where African heritage (African & Caribbean survivors of abuse and their families) sistahs can gather and talk, get and give support and advocacy and find refuge in a loving and safe environment. </p>
+  <p class="text-justify">It is essentially one room which has a very small kitchen area, two toilets an area divided in two where survivors can relax and watch a video and find solitude at one end of the room and take part in workshops or other activities at the other. </p>
+  <p class="text-justify">The lease is a short and we anticipate moving to another venue in 2017/18.</p>
+  <p class="text-justify">It is necessary to point out that although the Sistah Space is for the use of African heritage women and girls, we do sometimes include brothas into the Space. We are adamant that we need to keep unity within the African family where possible, and do not want to give the wrong impression that all men are perpetrators of domestic abuse. It is also vital that we embrace the often young sons, brothers  and families of survivors. We value the support that is given to us by the male members of our community. With this is mind, we have events and occasions where men are invited at the discretion of staff, Trustees and service users.  </p>
   <hr>
 </div>
 
@@ -107,7 +111,7 @@
     <p class = "text-right"><strong>Sistah Space 2016</strong></p>
     <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
     <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
-    <p>  </p>
+
   </div>
 </footer>
 </body>
