--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -88,7 +88,7 @@
   <div class="social social-header">
 
    <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-   <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+   <a href="https://twitter.com/sistah_space" target ="_blank"> <button class="btn-social twitter">   Twitter</button></a>
  </div>
 <img class = "img-responsive" src="../images/5.JPG" alt="picture">
 <div class ="text-area">
@@ -109,7 +109,7 @@
   <li><h3>Fundraisers</h3> we need supporters to host fundraising events to help raise funds for Sistah Space </li>
   <li><h3>Event co-ordinators</h3> to organise and run the weekly/fortnightly film and social nights <br>
   We would be very grateful if event holders would consider donating the use of a stall for Sistah Space to raise funds.</li></ul></br>
-  <h4 class="text-center" > If would like to help us in one the above mentioned roles <a href="..pages/contact.html">contact us</a>.</h4><hr>
+  <h4 class="text-center" > If would like to help us in one the above mentioned roles <a href="..pages/contact.html">contact us</a>.</h4>
 </div>
 
 <footer class="footer">
