--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -97,7 +97,7 @@
       </div>
 
   <div class="container-main">
-  <h2 class="text-center">Sistah Space</h2>
+  <h2 class="text-center">Sistah Space</h2></br>
   <h4 class="text-justify"> <b>The Sistah Space, also known as 'The Space' or Sistah Space Sanctuary (SSS) is a unique space of refuge and respite for Sistahs who have been affected by domestic and sexual violence and abuse. </b></h4>
   <p class="text-justify">So what is Sistah Space, it is a small venue where African heritage (African & Caribbean survivors of abuse and their families) sistahs can gather and talk, get and give support and advocacy and find refuge in a loving and safe environment. </p>
   <p class="text-justify">It is essentially one room which has a very small kitchen area, two toilets an area divided in two where survivors can relax and watch a video and find solitude at one end of the room and take part in workshops or other activities at the other. </p>
