--- a/pages/contact.html
+++ b/pages/contact.html
@@ -95,9 +95,8 @@
         </br>
         <h1 class = "text-center green"> Contact us</h1>   <hr>
         <div class = "container">
-        <h4> Our address </h4>
-        <h4>Telephone number</h4>
-        <h4>Email</h4>
+
+        <h4> To contact us email: <a href="info@sistah-space.co.uk"> info@sistah-space.co.uk</a></h4>
       </br>
       </br>
       </br>
