--- a/pages/shop.html
+++ b/pages/shop.html
@@ -103,8 +103,8 @@
   <div class="container-main">
   <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales.</p>
   <p> We have a number of cultural, wellbeing books and CDs available. We also have a wide range of Survivor Dolls, watches and many other quality products. <p>
-    <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our page on</h3>
-    <img src="../images/ebay.png" class="img-responsive ebay-logo"></a></br>
+    <!-- <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our page on</h3>
+    <img src="../images/ebay.png" class="img-responsive ebay-logo"></a></br> -->
 <div class = "shop-desktop">
   <div class="row">
     <div class="col-xs-6">
@@ -161,8 +161,8 @@
 </div>
 
 <div class="row">
-    <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our page on</h3>
-    <img src="../images/ebay.png" class="img-responsive ebay-logo"></a>
+    <!-- <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our page on</h3>
+    <img src="../images/ebay.png" class="img-responsive ebay-logo"></a> -->
 </div>
 
 <hr>
