new logos and pictures updated

--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -118,7 +118,7 @@
 
     <div class = "row">
       <div class = "col-sm-4">
-         <img src="../images/portrait.jpg" class = "portrait">
+         <img src="../images/ngozi.jpg" class = "portrait">
       </div>
       <div class = "col-sm-8">
     <blockquote> <p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p></blockquote>
