--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
     <h4 class = "text-center"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls.</h4>
     <h4 class = "text-center"> We work with our local community and services to raise awareness of domestic and sexual abuse.</h4>
   </div>
+  <div class = "row hackney-logos">
+    <img class = "hackney-logo" src = "images/HCVS_logo_grey.jpg">
+    <img class = " hackney-logo" src = "images/hackney giving logo black.jpg">
+  </div>
 </div>
 <div class="social social-intro">
   <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
@@ -293,6 +297,7 @@
        <footer class="footer">
         <div class="container">
           <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+          <!-- <img src = "images/HCVS_logo_grey.jpg"> -->
           <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
           <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
           <p>  </p>
